# langgraph_u

./: .env.example  .gitignore  README.md  pyproject.toml
01_agents/: L1_demo_04_multi_agents.ipynb  L1_solution_exercise_02_agents_from_scratch.ipynb  L1_solution_exercise_03_self_reflection.ipynb  L1_starter_exercise_04_tool_calling.ipynb  demo_04_multi_agents.ipynb  exercise_02_agents_from_scratch.ipynb  exercise_03_self_reflection.ipynb  exercise_04_tool_calling.ipynb  tool.ipynb  tools_from_scratch.ipynb
02_workflows/: L2_starter_exercise_02_multi_step_workflow.ipynb  demo_07_agent_class.ipynb  exercise_02_multi_step_workflow.ipynb  graph_from_scratch.ipynb  langgraph.ipynb
03_state_routing/: L3_demo_03_reducers.ipynb  L3_demo_06_limiting_messages.ipynb  L3_starter_exercise_01_router.ipynb  L3_starter_exercise_03_loan_agent.ipynb  demo_03_reducers.ipynb  demo_06_limiting_messages.ipynb  exercise_01_router.ipynb  exercise_03_loan_agent.ipynb
04_rag_memory_obs/: L4_demo_01_calling_apis.ipynb  L4_demo_02_persisting_memory.ipynb  L4_demo_03_embeddings.ipynb  L4_demo_04_chromadb.ipynb  L4_demo_06_langmem.ipynb  L4_demo_08_observability.ipynb  L4_starter_exercise_01_kb_agent.ipynb  L4_starter_exercise_02_evaluation.ipynb  demo_01_calling_apis.ipynb  demo_02_persisting_memory.ipynb  demo_03_embeddings.ipynb  demo_04_chromadb.ipynb  demo_06_langmem.ipynb  demo_07_human_in_the_loop.ipynb  demo_08_observability.ipynb  exercise_01_kb_agent.ipynb  exercise_02_evaluation.ipynb  rag.ipynb  rag_from_scratch.ipynb
