[project]
name = "langgraph_u"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.9",
    "ipywidgets>=8.1.8",
    "jupyterlab>=4.5.8",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-huggingface>=1.2.2",
    "langchain-openai>=1.2.2",
    "langchain-text-splitters>=1.1.2",
    "langchain-tools>=0.1.34",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "langmem>=0.0.30",
    "matplotlib>=3.11.0",
    "mlflow>=3.14.0",
    "numpy>=2.4.6",
    "pypdf>=6.13.3",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.9.0",
    "sentence-transformers>=5.6.0",
    "tavily>=1.1.0",
    "wikipedia>=1.4.0",
]
